--- a/content/support/gold.slim
+++ b/content/support/gold.slim
@@ -70,6 +70,95 @@ ul.nav.nav-pills
 		.span12
 			p &nbsp;
 
+
+
+.row
+  .span3
+    a.block.plaintext href="/docs/workswith"
+      .icons-box
+        i.ico-white.circle-color-full.icon-check
+        h3 10 Hours Custom Development
+        markdown:
+          Custom Development by the people that know ImageResizer best. If you are looking for the best performance, practices and security for ImageResizer, this the service for you.
+        .clear
+  .span3
+    a.block.plaintext href="/docs/workswith"
+      .icons-box
+        i.ico-white.circle-color-full.icon-road
+        h3 5 hours Architecture Planning
+        markdown:
+          Whether you at the beginning stages of your project or updating an existing one, consult with the ImageResizer experts and resolve issues upfront.
+        .clear
+  .span3
+    a.block.plaintext href="/docs/workswith"
+      .icons-box
+        i.ico-white.circle-color-full.icon-exclamation-circle
+        h3 10 Assisted Installations
+        markdown:
+          Save time by allowing us to do up to 10 assisted installs per year. We know ImageResizer best and use our experience and best practices to ensure things are running smoothly.
+
+          [1] possible icons: fa-exclamation-circle, fa-exclamation-triangle
+        .clear
+  .span3
+    a.block.plaintext href="/docs/workswith"
+      .icons-box
+        i.ico-white.circle-color-full.icon-check
+        h3 10 Hours Custom Development
+        markdown:
+          Custom Development by the people that know ImageResizer best. If you are looking for the best performance, practices and security for ImageResizer, this the service for you.
+        .clear
+  .span3
+    a.block.plaintext href="/docs/workswith"
+      .icons-box
+        i.ico-white.circle-color-full.icon-check
+        h3 10 Hours Custom Development
+        markdown:
+          Custom Development by the people that know ImageResizer best. If you are looking for the best performance, practices and security for ImageResizer, this the service for you.
+        .clear
+  .span3
+    a.block.plaintext href="/docs/workswith"
+      .icons-box
+        i.ico-white.circle-color-full.icon-check
+        h3 10 Hours Custom Development
+        markdown:
+          Custom Development by the people that know ImageResizer best. If you are looking for the best performance, practices and security for ImageResizer, this the service for you.
+        .clear
+  .span3
+    a.block.plaintext href="/docs/workswith"
+      .icons-box
+        i.ico-white.circle-color-full.icon-check
+        h3 10 Hours Custom Development
+        markdown:
+          Custom Development by the people that know ImageResizer best. If you are looking for the best performance, practices and security for ImageResizer, this the service for you.
+        .clear
+  .span3
+    a.block.plaintext href="/docs/workswith"
+      .icons-box
+        i.ico-white.circle-color-full.icon-check
+        h3 10 Hours Custom Development
+        markdown:
+          Custom Development by the people that know ImageResizer best. If you are looking for the best performance, practices and security for ImageResizer, this the service for you.
+        .clear
+  .span3
+    a.block.plaintext href="/docs/workswith"
+      .icons-box
+        i.ico-white.circle-color-full.icon-check
+        h3 10 Hours Custom Development
+        markdown:
+          Custom Development by the people that know ImageResizer best. If you are looking for the best performance, practices and security for ImageResizer, this the service for you.
+        .clear
+  .span3
+    a.block.plaintext href="/docs/workswith"
+      .icons-box
+        i.ico-white.circle-color-full.icon-check
+        h3 10 Hours Custom Development
+        markdown:
+          Custom Development by the people that know ImageResizer best. If you are looking for the best performance, practices and security for ImageResizer, this the service for you.
+        .clear
+
+/ possible icons: fa-check, fa-asterisk, fa-code-fork
+
+
 script src="http://www.e-junkie.com/ecom/box.js" type="text/javascript"
 javascript:
   | window.slimmage = {tryWebP:true, verbose:false};
