contracts second prototype * removed stock photo * hero graphics as png * design * heirarchy of features * variables to change number of hours, days, etc. * added new copy, about imazen

--- a/content/support/contracts.slim
+++ b/content/support/contracts.slim
@@ -1,6 +1,6 @@
 Flags: -comments
 Libs: -comments
-Icon: medkit
+Icon: picture
 
 
 
@@ -22,67 +22,47 @@ ul.nav.nav-pills
     a href="comparison"
     	| Product Comparison
 
+.row
+  .span12
+    .hero-unit
+      h2 Save Money with a Support Contract
+      h4 Get a direct line to our developers, latest features and plugins
 
-
-h3 Save money with a support contract.
-h3 All contracts include permanent licenses to the latest version of all plugins offered when the contract expires.
-h3 And even better - you get a direct line to the developers.
-style media="screen" type="text/css"
-  | @media (min-width: 767px) {
-  | \.fixed-height-col-top { height:450px; }
-  | \.fixed-height-col-hero { height:450px; }
-  | }
 .row-fluid
   .span4
-    .hero-unit
-      p &nbsp;
-      .row-fluid
-        .span8.offset2
-          p
-            a href="bronze"
-              img alt="ImageResizer Bronze" src="http://z.zr.io/rw/contracts/bronze.png"
-      p &nbsp;
+    .well
+      p: a href="bronze"
+        img alt="ImageResizer Bronze" src="/img/contracts/contract-hero-bronze.png"
+      p align="right"
+        a.btn.btn-primary href="bronze"
+          | Details &raquo;
       p
-    	| Get on track fast and avoid costly errors. Bronze Support includes a 30-minute architecture consulting call to help you make the most of ImageResizer. It also gives your designated point of contact 1 free priority support incident per month.
-			| For only $100 more than an Elite license (which is included!), a 6 month Bronze plan is always a better choice than an Elite license alone.
-      p &nbsp;
+      | Get on track fast and avoid costly errors. Bronze Support includes a 30-minute architecture consulting call to help you make the most of ImageResizer. It also gives your designated point of contact 1 free priority support incident per month.
       p
-        a.btn.btn-primary.btn-large href="bronze"
-          | Learn more about Bronze &raquo;
+      | For only $100 more than an Elite license (which is included!), a 6 month Bronze plan is always a better choice than an Elite license alone.
+      p &nbsp;
   .span4
-    .hero-unit
-      p &nbsp;
-      .row-fluid
-        .span8.offset2
-          p
-            a href="silver"
-              img alt="ImageResizer Silver" src="http://z.zr.io/rw/contracts/silver.png"
-      p
-      | &nbsp;
+    .well
+      p: a href="silver"
+        img alt="ImageResizer Silver" src="/img/contracts/contract-hero-silver.png"
+      p align="right"
+        a.btn.btn-primary href="silver"
+          | Details &raquo;
       p
       | Deploy to production with confidence, knowing we're only a phone call away if something goes wrong. Includes unlimited support incidents to your entire organization, with a 2 business-hour response time. Got a 3am disaster? 1 free emergency support incident is included per year.
       p
       | We'll also give you serious preventative help - 2 free hours of architecture consulting and up to 6 free hours of custom development are included, to ensure that 3am call never happens.
-      p
-      | &nbsp;
-      p
-        a.btn.btn-primary.btn-large href="silver"
-          | Learn more about Silver &raquo;
+      p &nbsp;
   .span4
-    .hero-unit
-      p &nbsp;
-      .row-fluid
-        .span8.offset2
-          p
-            a href="gold"
-              img alt="ImageResizer Gold" src="http://z.zr.io/rw/contracts/gold.png"
-      p &nbsp;
+    .well
+      p: a href="gold"
+        img alt="ImageResizer Bronze" src="/img/contracts/contract-hero-gold-alt.png"
+      p align="right"
+        a.btn.btn-primary href="gold"
+          | Details &raquo;
       p
       | Unlimited emergency support incidents across your organization. Hot-fixes delivered within 2 business days. Up to 20 free hours of custom development, and 5 hours of preventative consulting. We know how to scale to hundreds of terabytes of images and keep your sites running smooth.
       p &nbsp;
-      p
-        a.btn.btn-primary.btn-large href="gold"
-          | Learn more about Gold &raquo;
 
 h2 Purchase Orders and Invoices
 p You may request an invoice by e-mailing **support@imageresizing.net** with your company name and billing address.
@@ -93,6 +73,7 @@ script language="javascript" type="text/javascript"
 script src="http://www.e-junkie.com/ecom/box.js" type="text/javascript"
 h3 Medium-size print
 ul
+  li [1] You will recieve updates to the latest plugin licenses for the duration of your contract. This means that you will recieve all releases upto the last day of your purchased contract option.
   li Payment must clear before your Contract Services become available.
   li We reserve the right to cancel and pro-rata refund any support contract (we've never had to do this).
   li
