replaced silver text, removed about imazen well, cleanup

--- a/content/support/bronze.slim
+++ b/content/support/bronze.slim
@@ -1,6 +1,6 @@
 Flags: -comments
 Libs: -comments, bootstrap
-Icon: medkit
+Icon: picture
 
 
 h1 Support Contracts
@@ -23,7 +23,7 @@ ul.nav.nav-pills
 
 .row: .span12: p &nbsp;
 
-- contract_tier = "Silver"
+- contract_tier = "Bronze"
 - hours_dev = 1
 - hours_planning = 0.5
 - assist_inst = 2
@@ -83,7 +83,9 @@ ul.nav.nav-pills
               | Free Plugin Upgrades
     p &nbsp;
 
-    p The Silver Plan is ideal for Small Business with larger development teams. Where the Bronze Plan gets you one point of contact, the Silver Plan provides support for any contact at your Company.
+    p Get on track fast and avoid costly errors. Bronze Support includes a 30-minute architecture consulting call to help you make the most of ImageResizer. It also gives your designated point of contact 1 free priority support incident per month.
+
+    p For only $100 more than an Elite license (which is included!), a 6 month Bronze plan is always a better choice than an Elite license alone.
 
     h2 ImageResizer Deployment Platforms
 
@@ -128,19 +130,19 @@ ul.nav.nav-pills
     p
       | In addition to our imaging software expertise we also have extensive experience combining this with networking, authentication, load balancing, caching and web servers across Windows and UNIX based systems.
 
-    .well
-      markdown:
-        ## About Imazen
+    / .well
+    /   markdown:
+    /     ## About Imazen
 
-        Imazen is the global leader in imaging software for the Windows Server Platform
+    /     Imazen is the global leader in imaging software for the Windows Server Platform
 
-        Imazen partners with experts from the USA and abroad including the UK, Germany, Denmark, Norway, Netherlands, New Zealand and the Ukraine. This talent pool allows us to deliver unparalleled expertise and commitment on a project, regardless of size. Our agility allows us to provide three tiers of support from Enterprise level apps, to Mid-size Corporations, to even small startups. Our lowest cost plan starts at just $100 more than the Elite level license.
+    /     Imazen partners with experts from the USA and abroad including the UK, Germany, Denmark, Norway, Netherlands, New Zealand and the Ukraine. This talent pool allows us to deliver unparalleled expertise and commitment on a project, regardless of size. Our agility allows us to provide three tiers of support from Enterprise level apps, to Mid-size Corporations, to even small startups. Our lowest cost plan starts at just $100 more than the Elite level license.
 
-        While many developers are fine with taking on every aspect of their ImageResizer installation, smart companies know that tapping into Imazen's over 15 years of engineering experience and 9 years of global distributed systems expertise places them in an unparalleled position. You can save hundreds of man hours by being able to directly interact with the people that know ImageResizer best.
+    /     While many developers are fine with taking on every aspect of their ImageResizer installation, smart companies know that tapping into Imazen's over 15 years of engineering experience and 9 years of global distributed systems expertise places them in an unparalleled position. You can save hundreds of man hours by being able to directly interact with the people that know ImageResizer best.
 
-        Weather you are at the early planning stages, headlong into a critical sprint or nearing the final deployment stage of your project we are here to help. At all levels we provide unparalleled support and exclusive access to Imazen to provide assistance and consulting in the areas of architecture planning, assisted installation and custom development. For our enterprise level customers we guarantee support responses in 2 hours and hot fixes in 2 business days or less.
+    /     Weather you are at the early planning stages, headlong into a critical sprint or nearing the final deployment stage of your project we are here to help. At all levels we provide unparalleled support and exclusive access to Imazen to provide assistance and consulting in the areas of architecture planning, assisted installation and custom development. For our enterprise level customers we guarantee support responses in 2 hours and hot fixes in 2 business days or less.
 
-        At Imazen we not only develop imaging software for the Microsoft Windows Platform but we understand the needs of highly available, distributed systems including deployment and distribution in the cloud. We provide architectural oversight and scalability guidance for extreme growth. Don't let the memory leaks or bugs of unsupported software render your imaging solution useless when you need it most. For huge traffic spikes, weather seasonal or from Digg, you can rest assured that you are using a best of class solution with world class support.
+    /     At Imazen we not only develop imaging software for the Microsoft Windows Platform but we understand the needs of highly available, distributed systems including deployment and distribution in the cloud. We provide architectural oversight and scalability guidance for extreme growth. Don't let the memory leaks or bugs of unsupported software render your imaging solution useless when you need it most. For huge traffic spikes, weather seasonal or from Digg, you can rest assured that you are using a best of class solution with world class support.
 
     .row-fluid
       .span8.offset2
@@ -157,14 +159,6 @@ ul.nav.nav-pills
           | &nbsp; #{assist_inst} Assisted Installations
         p
           | Save time by allowing us to do up to #{assist_inst} assisted installs per year. We know ImageResizer best and use our experience and best practices to ensure things are running smoothly.
-        / h2: i.icon-time
-        /   | &nbsp; Guaranteed Support Response time in #{response_hours} hours
-        / p
-        /   | Our enterprise customers don't have to wait. Get a response from our support staff within #{response_hours} hours, guaranteed.
-        / h2: i.icon-calendar
-        /   | &nbsp; Priority Hot-fixes in #{hotfix_days} Business Days, Guaranteed
-        / p
-        /   | If you are running enterprise level applications it is critical that everything is running as expected. With our #{contract_tier} Plan we guarantee priority hot-fixes within two business days.
         h2: i.icon-comments
           | &nbsp; #{support_incidents} Support Incidents
         p
@@ -173,10 +167,6 @@ ul.nav.nav-pills
           | &nbsp; 1 Designated Contact
         p
           | You will be able to assign one person as a designated contact for your company.
-        / h2: i.icon-envelope-alt
-        /   | &nbsp; Custom e-mail to contact support
-        / p
-        /   | When you sign up for this support contract we will create a custom email address that you can use to get priority support.
         h2: i.icon-cloud-download
           | &nbsp; Free Plugin Upgrades
         p
@@ -186,58 +176,3 @@ ul.nav.nav-pills
 script src="http://www.e-junkie.com/ecom/box.js" type="text/javascript"
 javascript:
   | window.slimmage = {tryWebP:true, verbose:false};
-
-
-
-
-
-/ .row.hero-unit
-/   .span3
-/     h1
-/       img alt="ImageResizer Bronze Plan" src="http://z.zr.io/rw/contracts/bronze.png"
-/   .span5
-/ 	  p Get on track fast and avoid costly errors. Bronze Support includes a 30-minute architecture consulting call to help you make the most of ImageResizer. It also gives your designated point of contact 1 free priority support incident per month.
-/ 	  p For only $100 more than an Elite license (which is included!), a 6 month Bronze plan is always a better choice than an Elite license alone.
-/   .span3
-/     form accept-charset="UTF-8" action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=1087334&amp;cl=41912&amp;ejc=2" method="POST" target="ej_ejc"
-/       input name="o1" type="hidden" value="Bronze Tier 6 Month Contract"
-/         p
-/           a.btn.btn-success.btn-large.btn-block href="#" onClick="javascript:return EJEJC_lc(this.parentNode);"
-/             i.icon-shopping-cart.icon-white
-/             | $949/6 months &raquo;
-/     form accept-charset="UTF-8" action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=1087334&amp;cl=41912&amp;ejc=2" method="POST" target="ej_ejc"
-/       input name="o1" type="hidden" value="Bronze Tier 1 Year Contract"
-/         p
-/           a.btn.btn-success.btn-large.btn-block href="#" onClick="javascript:return EJEJC_lc(this.parentNode);"
-/             i.icon-shopping-cart.icon-white
-/             | $1500/yr &raquo;
-/     form accept-charset="UTF-8" action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=1087334&amp;cl=41912&amp;ejc=2" method="POST" target="ej_ejc"
-/       input name="o1" type="hidden" value="Bronze Tier 2 Year Contract"
-/         p
-/           a.btn.btn-success.btn-large.btn-block href="#" onClick="javascript:return EJEJC_lc(this.parentNode);"
-/             i.icon-shopping-cart.icon-white
-/             | $1000/yr with 2 year plan &raquo;
-
-
-/ - data_pixel_width = 640
-/ - normal_width = 240
-/ - quality_high = 90
-/ - quality_low = 80
-/ - image_prefix = "http://z.zr.io/rw/contracts/"
-/ - feature = [["world-code.jpg", "Development Assistance", "1 Hour Development Assistance", "Development Assistance by the people that know ImageResizer best. We can inform you of the best performance, practices and security for ImageResizer."], ["touchscreen-architecture.jpg", "Q&A Session", "30-minute Q&A Session", "Whether you at the beginning stages of your project or updating an existing one, consult with the ImageResizer experts and resolve issues upfront."], ["data-center.jpg", "Assisted Installations", "2 Assisted Installations", "Save time by allowing us to do up to 2 assisted installs per year. We know ImageResizer best and use our experience and best practices to ensure things are running smoothly."], ["support-button.jpg", "Support Incidents", "6 Support Incidents", "You may have a support incident once per month."], ["email.jpg", "Single Designated Contact", "Single Designated Contact", "With the Broze Plan you will have one designated contact at your organization. If you need additional contacts please see the Silver and Gold Plans."] , ["touchscreen-gears.jpg", "Free Plugin Upgrades", "Free Plugin Upgrades", "Keep your app secure and up to date with free plugin upgrades for the duration of your contract."]]
-
-/ - feature.each_slice(6) do | f_b |
-/ 	.row
-/ 		- f_b.each do | f |
-/ 			.span2
-/ 				p
-/ 					img alt="f[1]" data_pixel_width="#{data_pixel_width}" data-slimmage="true" data-src="#{image_prefix}#{f[0]}?width=#{normal_width}&format=jpg&quality=#{quality_high}" src="#{image_prefix}#{f[0]}?width=#{data_pixel_width}&format=jpg&quality=#{quality_low}"
-/ 				h3 #{f[2]}
-/ 				p #{f[3]}
-/ 	.row
-/ 		.span12
-/ 			p &nbsp;
-
-/ script src="http://www.e-junkie.com/ecom/box.js" type="text/javascript"
-/ javascript:
-/   | window.slimmage = {tryWebP:true, verbose:false};
