Move slimmage configuration to script.js; use ejunkie library from layout.slim instead of including it mid-page.

--- a/content/support/contracts/gold.slim
+++ b/content/support/contracts/gold.slim
@@ -1,5 +1,5 @@
 Flags: -comments
-Libs: -comments
+Libs: -comments, ejunkie
 Icon: picture
 
 
@@ -306,7 +306,3 @@ ul.nav.nav-pills
 / Orbit MVC (Lua)
 / Pluto (Lua)
 
-
-script src="http://www.e-junkie.com/ecom/box.js" type="text/javascript"
-javascript:
-  | window.slimmage = {tryWebP:true, verbose:false};
