--- a/content/support/contracts/silver.slim
+++ b/content/support/contracts/silver.slim
@@ -1,5 +1,5 @@
 Flags: -comments
-Libs: -comments, bootstrap
+Libs: -comments, bootstrap, ejunkie
 Icon: picture
 
 h1 Support Contracts
@@ -191,6 +191,3 @@ ul.nav.nav-pills
           | Keep your app secure and up to date with free plugin upgrades for the duration of your contract.
 
 
-script src="http://www.e-junkie.com/ecom/box.js" type="text/javascript"
-javascript:
-  | window.slimmage = {tryWebP:true, verbose:false};
