Use a template to reduce duplication on support contracts pages. Much left to deduplicate.

--- a/content/support/contracts/bronze.slim
+++ b/content/support/contracts/bronze.slim
@@ -1,25 +1,9 @@
 Flags: -comments
 Libs: -comments, bootstrap, ejunkie
 Icon: picture
-
+Layout: support_page
 
 h1 Support Contracts
-ul.nav.nav-pills
-  li
-    a href="contracts"
-    	| Overview
-  li.active
-    a href="bronze"
-      | Bronze
-  li
-    a href="silver"
-      | Silver
-  li
-    a href="gold"
-    	| Gold
-  li
-    a href="comparison"
-    	| Product Comparison
 
 .row: .span12: p &nbsp;
 
