--- a/content/support/contracts/index.slim
+++ b/content/support/contracts/index.slim
@@ -1,26 +1,10 @@
 Flags: -comments
 Libs: -comments
 Icon: picture
-
+Layout: support_page
 
 
 h1 Support Contracts
-ul.nav.nav-pills
-  li.active
-    a href="contracts"
-    	| Overview
-  li
-    a href="bronze"
-      | Bronze
-  li
-    a href="silver"
-      | Silver
-  li
-    a href="gold"
-    	| Gold
-  li
-    a href="comparison"
-    	| Product Comparison
 
 .row
   .span12
@@ -66,11 +50,7 @@ ul.nav.nav-pills
 
 h2 Purchase Orders and Invoices
 p You may request an invoice by e-mailing **support@imageresizing.net** with your company name and billing address.
-script language="javascript" type="text/javascript"
-  /!
-    | function EJEJC_lc(th) { return false; }
-    | \//
-script src="http://www.e-junkie.com/ecom/box.js" type="text/javascript"
+
 h3 Medium-size print
 ul
   li [1] You will recieve updates to the latest plugin licenses for the duration of your contract. This means that you will recieve all releases upto the last day of your purchased contract option.
