broken links: buttons and images

--- a/content/support/contracts/index.slim
+++ b/content/support/contracts/index.slim
@@ -15,10 +15,10 @@ h1 Support Contracts
 .row-fluid
   .span4
     .well
-      p: a href="bronze"
+      p: a href="contracts/bronze"
         img alt="ImageResizer Bronze" src="/img/contracts/contract-hero-bronze.png"
       p align="right"
-        a.btn.btn-primary href="bronze"
+        a.btn.btn-primary href="contracts/bronze"
           | Details &raquo;
       p
       | Get on track fast and avoid costly errors. Bronze Support includes a 30-minute architecture consulting call to help you make the most of ImageResizer. It also gives your designated point of contact 1 free priority support incident per month.
@@ -27,10 +27,10 @@ h1 Support Contracts
       p &nbsp;
   .span4
     .well
-      p: a href="silver"
+      p: a href="contracts/silver"
         img alt="ImageResizer Silver" src="/img/contracts/contract-hero-silver.png"
       p align="right"
-        a.btn.btn-primary href="silver"
+        a.btn.btn-primary href="contracts/silver"
           | Details &raquo;
       p
       | Deploy to production with confidence, knowing we're only a phone call away if something goes wrong. Includes unlimited support incidents to your entire organization, with a 2 business-hour response time. Got a 3am disaster? 1 free emergency support incident is included per year.
@@ -39,10 +39,10 @@ h1 Support Contracts
       p &nbsp;
   .span4
     .well
-      p: a href="gold"
+      p: a href="contracts/gold"
         img alt="ImageResizer Bronze" src="/img/contracts/contract-hero-gold-alt.png"
       p align="right"
-        a.btn.btn-primary href="gold"
+        a.btn.btn-primary href="contracts/gold"
           | Details &raquo;
       p
       | Unlimited emergency support incidents across your organization. Hot-fixes delivered within 2 business days. Up to 20 free hours of custom development, and 5 hours of preventative consulting. We know how to scale to hundreds of terabytes of images and keep your sites running smooth.
